# bwdk-sdk-rust

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: publish.yml
.openapi-generator/: FILES
docs/: AuthStatusResponse.md  BusinessAddress.md  DefaultApi.md  DeliveryTimeRangeDisplay.md  ErrorEnum.md  GatewayTypeEnum.md  Merchant.md  MerchantOrderCancelShipmentResponse.md  MerchantOrderRefundResponse.md  MerchantOrderReviveShipmentResponse.md  MerchantOrdersApi.md  MerchantPaidOrderList.md  MerchantWalletApi.md  Option.md  OrderCreate.md  OrderCreateResponse.md  OrderDetail.md  OrderError.md  OrderItemCreate.md  OrderShippingApi.md  OrderStatusEnum.md  OrderUser.md  Packing.md  PaginatedMerchantPaidOrderListList.md  PaginatedOrderDetailList.md  PaymentOrder.md  RefundOrder.md  ReviveShipment.md  SellerProfileManagementApi.md  ShippingMethod.md  ShippingTypeEnum.md  TypeNameEnum.md  UpdateOrderStatus.md  VerifyOrder.md  WalletBalance.md
src/apis/: configuration.rs  default_api.rs  merchant_orders_api.rs  merchant_wallet_api.rs  mod.rs  order_shipping_api.rs  seller_profile_management_api.rs
src/models/: _order_error.rs  auth_status_response.rs  business_address.rs  delivery_time_range_display.rs  error_enum.rs  gateway_type_enum.rs  merchant.rs  merchant_order_cancel_shipment_response.rs  merchant_order_refund_response.rs  merchant_order_revive_shipment_response.rs  merchant_paid_order_list.rs  mod.rs  null_enum.rs  option.rs  order_create.rs  order_create_response.rs  order_detail.rs  order_item_create.rs  order_status_enum.rs  order_user.rs  packing.rs  (+11 more)
